--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sistema de Registro de Juegos</title>
 </head>
 <body>
-    
+    <!-- Para acceder a VSC desde Git, hay que pulsar en el teclado "." desde la pagina del repositorio y nos abrirá en el navegador, ahí podemos modificar y en el ícono de Git (unas flechitas) aparecerá una notificación y hay que darle click ahí para cuando terminemos de editar, luego en el mensaje poner lo que queramos y al final confirmar y envir para actualizar en tiempo real
+    No existe una regla específica para el mensaje de los commits, pero en la comunidad internacional, especialmente en los países de habla inglesa, se recomienda usar el imperativo al comienzo de los commits.-->
 </body>
 </html>
